--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   
     <title>Document</title>
     <link rel="stylesheet" href="project.css">
     <link href="https://fonts.googleapis.com/css2?family=Calligraffitti&display=swap" rel="stylesheet">
 </head>
-<body class="tupac">
+<body>
 
-<div class="coverme">
+<nav class="coverme">
 
    <div class="project">
     <a id="home" href="index.html">.home()</a>
@@ -16,13 +16,13 @@
     <a id="conta" href="contact.html">.contact Me()</a>
     <a id="cv" href="cv.html">.my CV()</a>
     <a id="site" href="sitereport.html">.sitereport()</a>
-</div>
+   </div>
 
 <div class="rep">
     <h1 class="uttu">utsarga.adhikari()</h1>
     <h2 class="headme">Hey I'm Utsarga Adhikari</h2>
     <p class="goal">a web developer</p>
 </div>
-</div>
+</nav>
 </body>
 </html>
