--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Document</title>
     <link rel="stylesheet" href="project.css">
 </head>
 <body>
    <div class="alleyes">
-    <div class="nutri">
+    <div class="project">
         <a id="home" href="index.html">.home()</a>
         <a id="porta" href="portfolio.html">.my Portfolio()</a>
         <a id="conta" href="contact.html">.contact Me()</a>
