--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  
-    <title>Document</title>
+    <meta charset="UTF-8">
+    <title>Home</title>
     <link rel="stylesheet" href="project.css">
     <link href="https://fonts.googleapis.com/css2?family=Calligraffitti&display=swap" rel="stylesheet">
 </head>
