Complete siterport.html page for my project

--- a/sitereport.html
+++ b/sitereport.html
@@ -54,8 +54,18 @@
             </ul>
             <img class="keepitsmall" src="cv.JPG" alt="cv-html-progress-photo">
             <ul>
-            <li>27th May:</li>
+                <li>27th May:I completed the sitereport.html page</li>
             </ul>
+            <img class="keepitsmall" src="site1.JPG" alt="sitereport-complete">
+            <img class="keepitsmall" src="site2.JPG" alt="sitereport-complete">
+            <img class="keepitsmall" src="site3.JPG" alt="sitereport-complete">
+            <img class="keepitsmall" src="site4.JPG" alt="sitereport-complete">
+            <img class="keepitsmall" src="site5.JPG" alt="sitereport-complete">
+            <img class="keepitsmall" src="site6.JPG" alt="sitereport-complete">
+            <img class="keepitsmall" src="site7.JPG" alt="sitereport-complete">
+            <img class="keepitsmall" src="site8.JPG" alt="sitereport-complete">
+          
+
     </div>
     <h1 class="ray">A Reflective Discussion Of My Module</h1>
     <div class="discuss">
@@ -128,6 +138,9 @@
 
     <p>5. Validation of sitereport.html</p>
     <img class="keepitsmall" src="sitreport-valid.JPG" alt="sitreport-valid">
+
+    <p>6. Validation of CSS</p>
+    <img class="keepitsmall" src="css-validate.JPG" alt="css-validate">
     
 </div>
 
