--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Document</title>
+    <meta charset="UTF-8">
+    <title>Contact Me</title>
     <link rel="stylesheet" href="project.css">
 </head>
 <body>
@@ -19,7 +20,7 @@
 </h1>
 
 <form class="licensepls">
-    <input class="alexa" type="text" placeholder="Your First Name">
+    <input class="alexa"  type="text" placeholder="Your First Name">
     <input class="alexa"  type="text" placeholder="Your Last Name">
     <input class="alexa"  type="text" placeholder="Your E-mail Address">
     <input class="alexa"  type="text" placeholder="Phone">
