--- a/index.html
+++ b/index.html
@@ -4,18 +4,26 @@
     <meta charset="UTF-8">
     <title>Home</title>
     <link rel="stylesheet" href="project.css">
+    <link rel="stylesheet" href="responsive.css">
     <link href="https://fonts.googleapis.com/css2?family=Calligraffitti&display=swap" rel="stylesheet">
 </head>
 <body>
 
 <nav class="coverme">
-
+   
    <div class="project">
-    <a id="home" href="index.html">.home()</a>
-    <a id="porta" href="portfolio.html">.my Portfolio()</a>
-    <a id="conta" href="contact.html">.contact Me()</a>
-    <a id="cv" href="cv.html">.my CV()</a>
-    <a id="site" href="sitereport.html">.sitereport()</a>
+   
+    <label for="toggle">&#9776;</label>
+    <input type="checkbox"  id="toggle">
+
+<div class="behappy">
+    <a class="blueto" id="home" href="index.html">.home()</a>
+    <a class="blueto" id="porta" href="portfolio.html">.my Portfolio()</a>
+    <a class="blueto" id="conta" href="contact.html">.contact Me()</a>
+    <a class="blueto" id="cv" href="cv.html">.my CV()</a>
+    <a class="blueto" id="site" href="sitereport.html">.sitereport()</a>
+</div>
+    
    </div>
 
 <div class="rep">
