Finished contact.html with hamburger menu

--- a/contact.html
+++ b/contact.html
@@ -4,17 +4,24 @@
     <meta charset="UTF-8">
     <title>Contact Me</title>
     <link rel="stylesheet" href="project.css">
+    <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
    <div class="alleyes">
     <div class="project">
-        <a id="home" href="index.html">.home()</a>
-        <a id="porta" href="portfolio.html">.my Portfolio()</a>
-        <a id="conta" href="contact.html">.contact Me()</a>
-        <a id="cv" href="cv.html">.my CV()</a>
-        <a id="site" href="sitereport.html">.sitereport()</a>
-</div>
-
+   
+        <label for="toggle">&#9776;</label>
+        <input type="checkbox"  id="toggle">
+    
+    <div class="behappy">
+        <a class="blueto" id="home" href="index.html">.home()</a>
+        <a class="blueto" id="porta" href="portfolio.html">.my Portfolio()</a>
+        <a class="blueto" id="conta" href="contact.html">.contact Me()</a>
+        <a class="blueto" id="cv" href="cv.html">.my CV()</a>
+        <a class="blueto" id="site" href="sitereport.html">.sitereport()</a>
+    </div>
+        
+       </div>
 <h1 class="livelie">
     .Let's Work Together()
 </h1>
