Added validation screenshot of css for responsive view

--- a/sitereport.html
+++ b/sitereport.html
@@ -145,6 +145,9 @@
 
     <p>6. Validation of CSS</p>
     <img class="keepitsmall" src="css-validate.JPG" alt="css-validate">
+
+    <p>7. Validation of CSS for responsive view</p>
+    <img class="keepitsmall" src="respsonive-valid.JPG" alt="respsonive-valid">
     
 </div>
 
